--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -32,6 +32,16 @@ jobs:
       MDBOOK_VERSION: 0.4.40
     steps:
       - uses: actions/checkout@v4
+      # - name: Cache cargo
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ~/.cargo
+      #       ./target
+      #       key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      #       restore-keys: |
+      #           ${{ runner.os }}-cargo-
+
       - name: Install mdBook
         run: |
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
