--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -42,16 +42,30 @@ jobs:
       #       restore-keys: |
       #           ${{ runner.os }}-cargo-
 
-      - name: Install mdBook
+      # - name: Install mdBook
+      #   run: |
+      #     curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
+      #     rustup update
+      #     cargo install --version ${MDBOOK_VERSION} mdbook
+
+      - name: Setup mdBook
         run: |
-          curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
-          rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook
+              export MDBOOK_VERSION="v0.4.4"
+              export MDBOOK_TARBALL="mdbook-${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
+              wget -q "https://github.com/rust-lang/mdBook/releases/download/${MDBOOK_VERSION}/${MDBOOK_TARBALL}"
+              tar -zxvf "${MDBOOK_TARBALL}"
+              rm "${MDBOOK_TARBALL}"
+              mkdir ~/bin
+              mv ./mdbook ~/bin/
+              echo "::add-path::~/bin"
+
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Build with mdBook
         run: mdbook build
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
