--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -32,22 +32,6 @@ jobs:
       MDBOOK_VERSION: 0.4.40
     steps:
       - uses: actions/checkout@v4
-      # - name: Cache cargo
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.cargo
-      #       ./target
-      #       key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      #       restore-keys: |
-      #           ${{ runner.os }}-cargo-
-
-      # - name: Install mdBook
-      #   run: |
-      #     curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
-      #     rustup update
-      #     cargo install --version ${MDBOOK_VERSION} mdbook
-
       - name: Setup mdBook
         run: |
               export MDBOOK_VERSION="v0.4.4"
@@ -55,11 +39,11 @@ jobs:
               wget -q "https://github.com/rust-lang/mdBook/releases/download/${MDBOOK_VERSION}/${MDBOOK_TARBALL}"
               tar -zxvf "${MDBOOK_TARBALL}"
               rm "${MDBOOK_TARBALL}"
-              mkdir ~/bin
+              mkdir -p ~/bin
               mv ./mdbook ~/bin/
               echo "~/bin" >> $GITHUB_PATH
 
-      - name: Setup mdbook-mermaid
+      - name: Install mdbook-mermaid
         run: |
               export MDBOOK_MERMAID_VERSION="v0.14.0"
               export MERMAID_TARBALL="mdbook-mermaid-${MDBOOK_MERMAID_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
