--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -34,7 +34,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup mdBook
         run: |
-              export MDBOOK_VERSION="v0.4.36"
+              export MDBOOK_VERSION="v0.4.4"
               export MDBOOK_TARBALL="mdbook-${MDBOOK_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
               wget -q "https://github.com/rust-lang/mdBook/releases/download/${MDBOOK_VERSION}/${MDBOOK_TARBALL}"
               tar -zxvf "${MDBOOK_TARBALL}"
@@ -43,22 +43,19 @@ jobs:
               mv ./mdbook ~/bin/
               echo "~/bin" >> $GITHUB_PATH
 
-      # - name: Install mdbook-mermaid
-      #   run: |
-      #         export MDBOOK_MERMAID_VERSION="v0.14.0"
-      #         export MERMAID_TARBALL="mdbook-mermaid-${MDBOOK_MERMAID_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
-      #         wget -q "https://github.com/badboy/mdbook-mermaid/releases/download/${MDBOOK_MERMAID_VERSION}/${MERMAID_TARBALL}"
-      #         tar -zxvf "${MERMAID_TARBALL}"
-      #         rm "${MERMAID_TARBALL}"
-      #         mv ./mdbook-mermaid ~/bin/
-      #         echo "~/bin" >> $GITHUB_PATH
-      #         mdbook-mermaid install .
-
       - name: Install mdbook-mermaid
-        uses: extractions/setup-crate@v1
-        with:
-          owner: badboy
-          name: mdbook-mermaid
+        # run: |
+        #       export MDBOOK_MERMAID_VERSION="v0.14.0"
+        #       export MERMAID_TARBALL="mdbook-mermaid-${MDBOOK_MERMAID_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
+        #       wget -q "https://github.com/badboy/mdbook-mermaid/releases/download/${MDBOOK_MERMAID_VERSION}/${MERMAID_TARBALL}"
+        #       tar -zxvf "${MERMAID_TARBALL}"
+        #       rm "${MERMAID_TARBALL}"
+        #       mv ./mdbook-mermaid ~/bin/
+        #       echo "~/bin" >> $GITHUB_PATH
+        #       mdbook-mermaid install .
+        run: |
+              cargo install mdbook-mermaid
+              mdbook-mermaid install .
 
       - name: Setup Pages
         id: pages
