--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -44,18 +44,19 @@ jobs:
               echo "~/bin" >> $GITHUB_PATH
 
       - name: Install mdbook-mermaid
-        # run: |
-        #       export MDBOOK_MERMAID_VERSION="v0.14.0"
-        #       export MERMAID_TARBALL="mdbook-mermaid-${MDBOOK_MERMAID_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
-        #       wget -q "https://github.com/badboy/mdbook-mermaid/releases/download/${MDBOOK_MERMAID_VERSION}/${MERMAID_TARBALL}"
-        #       tar -zxvf "${MERMAID_TARBALL}"
-        #       rm "${MERMAID_TARBALL}"
-        #       mv ./mdbook-mermaid ~/bin/
-        #       echo "~/bin" >> $GITHUB_PATH
-        #       mdbook-mermaid install .
         run: |
-              cargo install mdbook-mermaid
+              export MDBOOK_MERMAID_VERSION="v0.14.0"
+              export MERMAID_TARBALL="mdbook-mermaid-${MDBOOK_MERMAID_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
+              wget -q "https://github.com/badboy/mdbook-mermaid/releases/download/${MDBOOK_MERMAID_VERSION}/${MERMAID_TARBALL}"
+              tar -zxvf "${MERMAID_TARBALL}"
+              rm "${MERMAID_TARBALL}"
+              mkdir -p ~/bin
+              mv ./mdbook-mermaid ~/bin/
+              echo "~/bin" >> $GITHUB_PATH
               mdbook-mermaid install .
+        # run: |
+        #       cargo install mdbook-mermaid
+        #       mdbook-mermaid install .
 
       - name: Setup Pages
         id: pages
