--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,7 @@
 site_name: Rocketry at Virginia Tech Knowledge Base
 site_url: https://rocketryatvirginiatech.org/knowledge-base/
+repo_url: https://github.com/RocketryVT/knowledge-base
+edit_uri: edit/main/docs/
 theme:
   name: material
   features:
@@ -7,6 +9,8 @@ theme:
     - content.code.copy
     - content.code.select
     - content.code.annotate
+    - content.action.edit
+    - content.action.view
     - navigation.instant
     - navigation.instant.prefetch
     - navigation.instant.progress
@@ -15,6 +19,26 @@ theme:
     - navigation.sections
     - navigation.expand
     - navigation.indexes
+  palette:
+    # Palette toggle for automatic mode
+    # - media: "(prefers-color-scheme)"
+    #   toggle:
+    #     icon: material/brightness-auto
+    #     name: Switch to light mode
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default 
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to system preference
 nav:
   - Home: README.md
   - Contributing: contributing.md
@@ -61,4 +85,12 @@ markdown_extensions:
       slugify: !!python/object/apply:pymdownx.slugs.slugify
         kwds:
           case: lower
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+plugins:
+  - git-revision-date-localized:
+      enable_creation_date: true
   
